--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="javascript/register.js" defer></script>
 	<script src="javascript/settings.js" defer></script>
 	<script src="javascript/match-history.js" defer></script>
-	<script src="javascript/pong.js" defer></script>
+	<script type="module" src="javascript/game-logic.js"></script>
 	<script src="javascript/game-ui.js" defer></script>
 	<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 
@@ -80,10 +80,10 @@
 					</div>
 				</div>
 				
-				<!-- <div class="game hidden">
+				<div class="game d-none">
 					<canvas></canvas>
 					<p>Control the left player by using up and down arrow keys</p>
-				</div> -->
+				</div>
 			</main>
 		</div>
 	</div>
